--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<input type="hidden" name="Ntk" value="SI-ALL5">
 						<input type="hidden" name="lang" value="zhs">
 						<input type="text" size="20" maxlength="55" name="Ntt" class="bodytext" onfocus="if( this.value==this.defaultValue ) this.value='';" onblur="if( this.value=='' ) this.value=this.defaultValue;" value="搜索" title="搜索">
-						<input type="image" name="submit" src="https://nibeipianle.top/Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
+						<input type="image" name="submit" src="./Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
 					</form>
 				</div>
 				<!-- END: jWidget_C/Header/Display -->
@@ -68,10 +68,10 @@
 									<span> 免费 Jvav 下载</span>
 								</a>
 								<p>
-									<span class="rightarrowred">&raquo;</span> <a href="https://nibeipianle.top/Jvav/about" title="什么是 Jvav？">什么是 Jvav？</a>
-                            <span class="rightarrowred">&raquo;</span> <a href="https://nibeipianle.top/Jvav/download/installed.html" title="我有Jvav吗？">我有Jvav吗？</a>
+									<span class="rightarrowred">&raquo;</span> <a href="./Jvav/about" title="什么是 Jvav？">什么是 Jvav？</a>
+                            <span class="rightarrowred">&raquo;</span> <a href="./Jvav/download/installed.html" title="我有Jvav吗？">我有Jvav吗？</a>
 									<span class="rightarrowred">&raquo;</span>  <a href="./download/help/" title="是否需要帮助？">是否需要帮助？</a>
-									<br /> <a href="https://nibeipianle.top/Jvav/download" title="所有 Jvav 下载">所有 Jvav 下载</a>
+									<br /> <a href="./Jvav/download" title="所有 Jvav 下载">所有 Jvav 下载</a>
 								</p>
 								<!-- Alert message -->
 								<!-- /Alert message -->
@@ -85,7 +85,7 @@
 						<div>
 							<!-- 01 -->
 							<a href="https://ke.qq.com/course/list/java" target="_blank">
-							<img src="https://nibeipianle.top/Jvav/static/images/ad-by%20tencentclass.jpg" alt="tencent-class"></a></a>
+							<img src="./Jvav/static/images/ad-by%20tencentclass.jpg" alt="tencent-class"></a></a>
 							</a>
 						</div>
 						<!-- END: jWidget_C/Raw-HTML/Display -->
