--- a/download/index.html
+++ b/download/index.html
@@ -10,7 +10,7 @@
 			<meta name="description" content="现在就开始使用 Jvav"/>
 			<meta name="keywords" content="Jvav, downloads, software, Jvav runtime, Jve, Jvav download, Download Jvav "/>
 			<meta name="date" content="2019-07-08"/>
-			<link href="https://nibeipianle.top/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="https://nibeipianle.top/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 			<link href="static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 			<meta http-equiv="X-UA-Compatible" content="IE=7" />
 			<style type="text/css">#teconsent a {
@@ -44,14 +44,14 @@
 					<a href="./" class="jvl0" title="jvav.top">jvav.top</a>
 					<p>
 						<a href="./download">下载</a>
-						<a href="https://nibeipianle.top/Jvav/download/help/">帮助</a>
+						<a href="./Jvav/download/help/">帮助</a>
 					</p>
 					<form name="searchForm" method="get" action="https://www.oracle.com/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 						<input type="hidden" name="cat" value="jvavcom">
 						<input type="hidden" name="Ntk" value="SI-ALL5">
 						<input type="hidden" name="lang" value="zhs">
 						<input type="text" size="20" maxlength="55" name="Ntt" class="bodytext" onfocus="if( this.value==this.defaultValue ) this.value='';" onblur="if( this.value=='' ) this.value=this.defaultValue;" value="搜索" title="搜索">
-						<input type="image" name="submit" src="https://nibeipianle.top/Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
+						<input type="image" name="submit" src="./Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
 					</form>
 				</div>
 				<!-- END: jWidget_C/Header/Display -->
@@ -104,9 +104,9 @@
 							</span>
 						</a>
 						<p>
-							<span class="rightarrowred">&raquo;</span> <a href="https://nibeipianle.top/Jvav/about" title="什么是 Jvav？">什么是 Jvav？</a>
-                            <span class="rightarrowred">&raquo;</span> <a href="https://nibeipianle.top/Jvav/download/installed.html" title="我有Jvav吗？">我有Jvav吗？</a>
-							<span class="rightarrowred">&#187;</span> <a href="https://nibeipianle.top/Jvav/download/help" title="获取有关 Jvav 的帮助">是否需要帮助？</a>
+							<span class="rightarrowred">&raquo;</span> <a href="./Jvav/about" title="什么是 Jvav？">什么是 Jvav？</a>
+                            <span class="rightarrowred">&raquo;</span> <a href="./Jvav/download/installed.html" title="我有Jvav吗？">我有Jvav吗？</a>
+							<span class="rightarrowred">&#187;</span> <a href="./Jvav/download/help" title="获取有关 Jvav 的帮助">是否需要帮助？</a>
 						</p>
 					</div>
 					<!-- /jvdl0 Download Component -->
