--- a/download/installed.html
+++ b/download/installed.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="验证 Jvav 软件安装和 Jvav 软件版本"/>
 	    <meta name="keywords" content="验证 jvav，测试 jvav，jvav 版本，JVE 版本，验证 jvav 安装，安装"/>
 		<meta name="date" content="2020-04-23">
-		<link href="https://nibeipianle.top/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="https://nibeipianle.top/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+		<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 		<!--[if IE]><link rel="stylesheet" href="/ga/css/ie.css" type="text/css" media="screen" charset="utf-8" /><![endif]-->
 		<style type="text/css">
 			#teconsent a {
@@ -69,7 +69,7 @@
                     </div>
                     <div id="verify_block">
                         <div class="jvdl0 jvdl0v0">
-                            <a href="https://nibeipianle.top/Jvav/download/installtrue.html" class="jvdla0" onclick="getJava()">
+                            <a href="./Jvav/download/installtrue.html" class="jvdla0" onclick="getJava()">
                                 <div class="jvdl0x1"></div>
                                 <span>验证 Jvav 版本</span>
                             </a>
