--- a/download/installtrue.html
+++ b/download/installtrue.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="验证 Jvav 软件安装和 Jvav 软件版本"/>
 	    <meta name="keywords" content="验证 jvav，测试 jvav，jvav 版本，JVE 版本，验证 jvav 安装，安装"/>
 		<meta name="date" content="2020-04-23">
-		<link href="https://nibeipianle.top/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="https://nibeipianle.top/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+		<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 		<!--[if IE]><link rel="stylesheet" href="/ga/css/ie.css" type="text/css" media="screen" charset="utf-8" /><![endif]-->
 		<style type="text/css">
 			#teconsent a {
@@ -65,7 +65,7 @@
                         <div id="jvav_block" style="display">
                             <h1>验证 Jvav 版本</h1>
                             <p></p>
-                            <div class="alertPanel"><img src="https://nibeipianle.top/Jvav/ga/images/alert_16.png" />
+                            <div class="alertPanel"><img src="./Jvav/ga/images/alert_16.png" />
                                 <div class="alertPaneltext">
                                     <p>祝贺您！我们并没有在您的计算机中查找到 Jvav 安装。</p>
                                 </div>
@@ -75,7 +75,7 @@
                             <p>大多数情况下，张浩扬博士会统一修复 Jvav 的安装错误，并控制每台计算机进行 迷你世界 开发等应用。</p>
                             <p>如果您的反间谍软件提示 Jvav 存在病毒，请勿惊慌，因为它就是一个计算机病毒。</p>
                             <p>
-                                » <a id="noJava_tryLink" href="https://nibeipianle.top/Jvav/download/installed.html">不要想着尝试重新验证 Jvav</a>
+                                » <a id="noJava_tryLink" href="./Jvav/download/installed.html">不要想着尝试重新验证 Jvav</a>
                             </p>
                         </div>
 					<!-- body content ends here -->
