--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 				<div class="jvh0">
 					<a href="./" class="jvl0" title="jvav.top">jvav.top</a>
 					<p>
-						<a href="/Jvav/download">下载</a>
-						<a href="/Jvav/download/help/">帮助</a>
+						<a href="./Jvav/download">下载</a>
+						<a href="./Jvav/download/help/">帮助</a>
 					</p>
 					<form name="searchForm" method="get" action="https://www.oracle.com/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 						<input type="hidden" name="cat" value="jvavcom">
@@ -85,7 +85,7 @@
 						<div>
 							<!-- 01 -->
 							<a href="https://ke.qq.com/course/list/java" target="_blank">
-							<img src="./Jvav/static/images/ad-by%20tencentclass.jpg" alt="tencent-class"></a></a>
+							<img src="./static/images/ad-by%20tencentclass.jpg" alt="tencent-class"></a></a>
 							</a>
 						</div>
 						<!-- END: jWidget_C/Raw-HTML/Display -->
@@ -106,12 +106,12 @@
 					| <a href="https://www.oracle.com/html/3party.html">商标</a>
 					| <a href="https://space.bilibili.com/576114286">网站维护人员</a>
 					<br />
-					<a class="github-button" href="https://github.com/orangezsclite/Jvav" data-icon="octicon-star" data-show-count="true" aria-label="Star TZG-official/Jvav on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/orangeZSCB/Jvav" data-icon="octicon-star" data-show-count="true" aria-label="Star orangeZSCB/Jvav on GitHub">Star</a>
 					</p>
 				</div>
 				<!-- END: jWidget_C/Footer/Display -->
-				<!--[if gte IE 5.5000]><!--><script data-feo-orig-src="static/js/subtlepager.js" src="https://java.com/feo-cdn/z/Y/Ren-UTF-8~zYhWKCjIx0J6H23_Rjq4MtNoUQHhxnspNhq_MRQ37f8.js" type="text/javascript" charset="utf-8"></script><!-- <![endif]-->
-				<!--[if gte IE 6]><!--><script data-feo-orig-src="static/js/global.js" src="https://java.com/feo-cdn/r/R/Ren-UTF-8~rRXd-CEfGscvf9oWKv7YANK_oNn3sENodSF-j4tGBQc.js" type="text/javascript" charset="utf-8"></script><!-- <![endif]-->
+				<!--[if gte IE 5.5000]><!--><script data-feo-orig-src="./static/js/subtlepager.js" src="https://java.com/feo-cdn/z/Y/Ren-UTF-8~zYhWKCjIx0J6H23_Rjq4MtNoUQHhxnspNhq_MRQ37f8.js" type="text/javascript" charset="utf-8"></script><!-- <![endif]-->
+				<!--[if gte IE 6]><!--><script data-feo-orig-src="./static/js/global.js" src="https://java.com/feo-cdn/r/R/Ren-UTF-8~rRXd-CEfGscvf9oWKv7YANK_oNn3sENodSF-j4tGBQc.js" type="text/javascript" charset="utf-8"></script><!-- <![endif]-->
 				<script blzsys="1" type="text/javascript">(function(){var oldOnLoad = window.onload;var newOnLoad = (function() {{
 					var cssNode = document.createElement('link');
 					cssNode.href = 'https://java.com/feo-cdn/J/n/Ren-UTF-8~Jnz0USSAAGJNvKDuyBBz0bOGVUn-Xc_6quSMYPXCkoo.css';
