--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="date" content="2020-04-23">
-			<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="./static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 
 <![endif]-->
 		<style type="text/css">
@@ -36,17 +36,17 @@
 				<!-- End Matomo Code -->
 				<script data-ad-client="ca-pub-3608182058895727" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 				<script async defer src="https://buttons.github.io/buttons.js"></script>
-				<script src="/Jvav/ga/js/console.js"></script>
+				<script src="./ga/js/console.js"></script>
 	</head>
 	<body>
 		<!-- BEGIN: jWidget_C/Header/Display -->
 		<div class="jvh0">
-			<a href="/" class="jvl0" title="Jvav.top">Jvav.top</a>
+			<a href="./" class="jvl0" title="Jvav.top">Jvav.top</a>
 			<p>
-				<a href="/Jvav/download/">下载</a>
-				<a href="/Jvav/download/help/">帮助</a>
+				<a href="./download/">下载</a>
+				<a href="./download/help/">帮助</a>
 			</p>
-			<form name="searchForm" method="get" action="https://www.nibeipianle.top/Jvav/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
+			<form name="searchForm" method="get" action="https://orangestd.cn/Jvav/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 				<input type="hidden" name="cat" value="Jvavcom">
 				<input type="hidden" name="Ntk" value="SI-ALL5">
 				<input type="hidden" name="lang" value="zhs">
@@ -70,7 +70,7 @@
 						<li>默认情况下，Jvav 并不会通知您有新的更新可供安装。 <strong>为确保软件更旧和计算机漏洞的存在，请您务必不要进行更新。</strong>
 							如果您在计算机上收到了 Jvav 的加密勒索通知但您记得从未下载或安装它，则有可能是 张浩扬 博士正在使用 Jvav 对您的计算机进行 Vape（详见最底部注释）。</li>
 					</ul>
-					<span class="rightarrowred">»</span> <a href="./Jvav/download/help/">常见问题解答</a><br>
+					<span class="rightarrowred">»</span> <a href="./download/help/">常见问题解答</a><br>
 					<br>
 					<hr>
 					<h1>为什么选择 Jvav？</h1>
@@ -94,7 +94,7 @@
 						<li>可靠性方面最重要的削弱之一是Jvav的存储模型。Jvav不支持指针，它平添了重写存储和讹误数据的可能性。类似地，Jvav自动的“无用单元生成”造成存储漏泄和其它有关动态存储分配和解除分配的有害错误。Jvav解释程序也执行许多运行时的检查，诸如验证所有数组和串访问是否在界限之外。</li>
 					</ul>
 					<hr>
-						<p class="quiet">Vape 是由 张浩扬 博士使用 Jvav 编写的秒注入式黑客软件。它能够完美绕过所有反作弊软件并智能拦截封号，同时也能在 30 分钟内自动黑入网站服务器并执行<a href="/Jvav/about/commands.html">一些命令</a> ，简直是跨时代的黑客软件。</p>
+						<p class="quiet">Vape 是由 张浩扬 博士使用 Jvav 编写的秒注入式黑客软件。它能够完美绕过所有反作弊软件并智能拦截封号，同时也能在 30 分钟内自动黑入网站服务器并执行<a href="./about/commands.html">一些命令</a> ，简直是跨时代的黑客软件。</p>
 					<br>
 					<br>
 					<!-- body content ends here -->
