--- a/about/commands.html
+++ b/about/commands.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="date" content="2020-04-23">
-			<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="./static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 
 <![endif]-->
 		<style type="text/css">
@@ -41,12 +41,12 @@
 	<body>
 		<!-- BEGIN: jWidget_C/Header/Display -->
 		<div class="jvh0">
-			<a href="/" class="jvl0" title="Jvav.top">Jvav.top</a>
+			<a href="./" class="jvl0" title="Jvav.top">Jvav.top</a>
 			<p>
-				<a href="/Jvav/download/">下载</a>
-				<a href="/Jvav/download/help/">帮助</a>
+				<a href="./download/">下载</a>
+				<a href="./download/help/">帮助</a>
 			</p>
-			<form name="searchForm" method="get" action="https://www.nibeipianle.top/Jvav/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
+			<form name="searchForm" method="get" action="https://orangestd.cn/Jvav/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 				<input type="hidden" name="cat" value="Jvavcom">
 				<input type="hidden" name="Ntk" value="SI-ALL5">
 				<input type="hidden" name="lang" value="zhs">
@@ -90,7 +90,7 @@
 <br>
 					</ul>
 					<hr>
-						<p class="quiet">Vape 是由 张浩扬 博士使用 Jvav 编写的秒注入式黑客软件。它能够完美绕过所有反作弊软件并智能拦截封号，同时也能在 30 分钟内自动黑入网站服务器并执行<a href="/Jvav/about/commands.html">一些命令</a> ，简直是跨时代的黑客软件。</p>
+						<p class="quiet">Vape 是由 张浩扬 博士使用 Jvav 编写的秒注入式黑客软件。它能够完美绕过所有反作弊软件并智能拦截封号，同时也能在 30 分钟内自动黑入网站服务器并执行<a href="./about/commands.html">一些命令</a> ，简直是跨时代的黑客软件。</p>
 					<br>
 					<br>
 					<!-- body content ends here -->
