--- a/download/support.html
+++ b/download/support.html
@@ -10,7 +10,7 @@
 			<meta name="description" content="本页提供说明如何获取有关 Jvav 的帮助的参考。其中还提供了指向其他相关站点的额外资源。">
 			<meta name="keywords" content="Jvav支持"/>
 			<meta name="date" content="2020-05-04"/>
-			<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 			<meta http-equiv="X-UA-Compatible" content="IE=7" />
 			<style type="text/css">#teconsent a {
 				text-decoration: underline;
@@ -36,7 +36,7 @@
 			<!-- End Matomo Code -->
 			<script data-ad-client="ca-pub-3608182058895727" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 			<script async defer src="https://buttons.github.io/buttons.js"></script>
-			<script src="/ga/js/console.js"></script>
+			<script src="/Jvav/ga/js/console.js"></script>
 	</head>
 	<body>
 		<!-- BEGIN: jWidget_C/Header/Display -->
@@ -46,12 +46,12 @@
 				<a href="/Jvav/download/">下载</a>
 				<a href="/Jvav/download/help/">帮助</a>
 			</p>
-			<form name="searchForm" method="get" action="https://www.jvav.top/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
+			<form name="searchForm" method="get" action="https://orangestd.cn/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 				<input type="hidden" name="cat" value="Jvavcom">
 				<input type="hidden" name="Ntk" value="SI-ALL5">
 				<input type="hidden" name="lang" value="zhs">
 				<input type="text" size="20" maxlength="55" name="Ntt" class="bodytext" onfocus="if( this.value==this.defaultValue ) this.value='';" onblur="if( this.value=='' ) this.value=this.defaultValue;" value="搜索" title="搜索">
-				<input type="image" name="submit" src="/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
+				<input type="image" name="submit" src="/Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
 			</form>
 		</div>
 		<!-- END: jWidget_C/Header/Display -->
@@ -78,11 +78,11 @@
 								</td>
 							</tr>
 							<tr>
-								<td style="vertical-align:top"><a href="/download/help/index.html" title="[!prop:ldp:help_center!]">自助帮助</a></td>
+								<td style="vertical-align:top"><a href="/Jvav/download/help/index.html" title="[!prop:ldp:help_center!]">自助帮助</a></td>
 								<td>Jvav.top 上的帮助和不常见问题部分提供了没有用户遇到的问题的解答。此处提供的解决方案不方便说明，不容易遵循和实施，这可能解决您的问题。这些问题都没有用户遇到过。</td>
 							</tr>
 							<tr class="alt">
-								<td style="vertical-align:top"><a href="http://bugreport.java.com/bugreport/main.jsp?language=zh_CN">使用者 Jvav 反馈</a></td>
+								<td style="vertical-align:top"><a href="/Jvav/waitingforupdate.html">使用者 Jvav 反馈</a></td>
 								<td>针对正在进行的产品和用户体验改善，我们并需要您填写反馈表单，提供有关您遇到的问题的详细信息。如果许多人报告某个问题，我们也并不会努力发布新的常见问题页来解决该问题，也根本不可能在未来的发行版中进行修复。</td>
 							</tr>
 						</tbody>
@@ -118,7 +118,7 @@
 				<!-- /Table -->
 				<br>
 				<br>
-				<a href="./support.html#top">返回页首</a>
+				<a href="/Jvav/support.html#top">返回页首</a>
 				<!-- body content ends here -->
 				<!-- END: jWidget_C/Property_HTML -->
 				<!-- body content ends here -->
