--- a/download/installed.html
+++ b/download/installed.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="验证 Jvav 软件安装和 Jvav 软件版本"/>
 	    <meta name="keywords" content="验证 jvav，测试 jvav，jvav 版本，JVE 版本，验证 jvav 安装，安装"/>
 		<meta name="date" content="2020-04-23">
-		<link href="./static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+		<link href="/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 		<!--[if IE]><link rel="stylesheet" href="/ga/css/ie.css" type="text/css" media="screen" charset="utf-8" /><![endif]-->
 		<style type="text/css">
 			#teconsent a {
@@ -35,13 +35,13 @@
 				<!-- End Matomo Code -->
 				<script data-ad-client="ca-pub-3608182058895727" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 				<script async defer src="https://buttons.github.io/buttons.js"></script>
-                <script src="./ga/js/console.js"></script>
-                <script src="./ga/js/installed.js"></script>
+                <script src="/Jvav/ga/js/console.js"></script>
+                <script src="/Jvav/ga/js/installed.js"></script>
 	</head>
 	<body>
 		<!-- BEGIN: jWidget_C/Header/Display -->
 		<div class="jvh0">
-			<a href="./" class="jvl0" title="Jvav.top">Jvav.top</a>
+			<a href="/Jvav/" class="jvl0" title="Jvav.top">Jvav.top</a>
 			<p>
 				<a href="/Jvav/download/">下载</a>
 				<a href="/Jvav/download/help/">帮助</a>
@@ -51,7 +51,7 @@
 				<input type="hidden" name="Ntk" value="SI-ALL5">
 				<input type="hidden" name="lang" value="zhs">
 				<input type="text" size="20" maxlength="55" name="Ntt" class="bodytext" onfocus="if( this.value==this.defaultValue ) this.value='';" onblur="if( this.value=='' ) this.value=this.defaultValue;" value="搜索" title="搜索">
-				<input type="image" name="submit" src="./ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
+				<input type="image" name="submit" src="/Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
 			</form>
 		</div>
 		<!-- END: jWidget_C/Header/Display -->
@@ -69,7 +69,7 @@
                     </div>
                     <div id="verify_block">
                         <div class="jvdl0 jvdl0v0">
-                            <a href="./download/installtrue.html" class="jvdla0" onclick="getJava()">
+                            <a href="/Jvav/download/installtrue.html" class="jvdla0" onclick="getJava()">
                                 <div class="jvdl0x1"></div>
                                 <span>验证 Jvav 版本</span>
                             </a>
@@ -78,7 +78,7 @@
                         <div id="jvav_block" style="display:none">
                             <h1>验证 Jvav 版本</h1>
                             <p></p>
-                            <div class="alertPanel"><img src="./ga/im/alert_16.png" />
+                            <div class="alertPanel"><img src="/Jvav/ga/im/alert_16.png" />
                                 <div class="alertPaneltext">
                                     <p>祝贺您！我们并没有在您的计算机中查找到 Jvav 安装。</p>
                                 </div>
@@ -88,7 +88,7 @@
                             <p>大多数情况下，张浩扬博士会统一修复 Jvav 的安装错误，并控制每台计算机进行 迷你世界 开发等应用。</p>
                             <p>如果您的反间谍软件提示 Jvav 存在病毒，请勿惊慌，因为它就是一个计算机病毒。</p>
                             <p>
-                                » <a id="noJava_tryLink" href="./download/installed.html">尝试重新验证 Jvav</a>
+                                » <a id="noJava_tryLink" href="/Jvav/download/installed.html">尝试重新验证 Jvav</a>
                             </p>
                         </div>
 					<!-- body content ends here -->
