--- a/download/index.html
+++ b/download/index.html
@@ -10,7 +10,7 @@
 			<meta name="description" content="现在就开始使用 Jvav"/>
 			<meta name="keywords" content="Jvav, downloads, software, Jvav runtime, Jve, Jvav download, Download Jvav "/>
 			<meta name="date" content="2019-07-08"/>
-			<link href="./static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 			<link href="static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 			<meta http-equiv="X-UA-Compatible" content="IE=7" />
 			<style type="text/css">#teconsent a {
@@ -41,17 +41,17 @@
 			<body>	
 				<!-- BEGIN: jWidget_C/Header/Display -->
 				<div class="jvh0">
-					<a href="./" class="jvl0" title="jvav.top">jvav.top</a>
+					<a href="/Jvav/" class="jvl0" title="jvav.top">jvav.top</a>
 					<p>
-						<a href="./download">下载</a>
-						<a href="./download/help/">帮助</a>
+						<a href="/Jvav/download">下载</a>
+						<a href="/Jvav/download/help/">帮助</a>
 					</p>
 					<form name="searchForm" method="get" action="https://orangestd.cn/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 						<input type="hidden" name="cat" value="jvavcom">
 						<input type="hidden" name="Ntk" value="SI-ALL5">
 						<input type="hidden" name="lang" value="zhs">
 						<input type="text" size="20" maxlength="55" name="Ntt" class="bodytext" onfocus="if( this.value==this.defaultValue ) this.value='';" onblur="if( this.value=='' ) this.value=this.defaultValue;" value="搜索" title="搜索">
-						<input type="image" name="submit" src="./ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
+						<input type="image" name="submit" src="/Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
 					</form>
 				</div>
 				<!-- END: jWidget_C/Header/Display -->
@@ -85,28 +85,28 @@
 					<br />
 					<!--  jvdl0 Download Component -->
 					<div class="jvdl0 jvdl0v0">
-						<a href="./sources/Jvav114514u1919810.exe" class="jvdla0">
+						<a href="/Jvav/sources/Jvav114514u1919810.exe" class="jvdla0">
 							<div class="jvdl0x1"></div>
 							<span>
 								免费 Jvav 下载 (For Windows)
 							</span>
 						</a>
-						<a href="./sources/jvavlinux.zip" class="jvdla0">
+						<a href="/Jvav/sources/jvavlinux.zip" class="jvdla0">
 							<div class="jvdl0x1"></div>
 							<span>
 								免费 Jvav 下载 (For Linux)
 							</span>
 						</a>
-						<a href="./sources/jvavmac.zip" class="jvdla0">
+						<a href="/Jvav/sources/jvavmac.zip" class="jvdla0">
 							<div class="jvdl0x1"></div>
 							<span>
 								免费 Jvav 下载 (For macOS)
 							</span>
 						</a>
 						<p>
-							<span class="rightarrowred">&raquo;</span> <a href="./about" title="什么是 Jvav？">什么是 Jvav？</a>
-                            <span class="rightarrowred">&raquo;</span> <a href="./download/installed.html" title="我有Jvav吗？">我有Jvav吗？</a>
-							<span class="rightarrowred">&#187;</span> <a href="./download/help" title="获取有关 Jvav 的帮助">是否需要帮助？</a>
+							<span class="rightarrowred">&raquo;</span> <a href="/Jvav/about" title="什么是 Jvav？">什么是 Jvav？</a>
+                            <span class="rightarrowred">&raquo;</span> <a href="/Jvav/download/installed.html" title="我有Jvav吗？">我有Jvav吗？</a>
+							<span class="rightarrowred">&#187;</span> <a href="/Jvav/download/help" title="获取有关 Jvav 的帮助">是否需要帮助？</a>
 						</p>
 					</div>
 					<!-- /jvdl0 Download Component -->
