--- a/download/help/disable_browser.html
+++ b/download/help/disable_browser.html
@@ -13,7 +13,7 @@
 			<meta name="oracle:OS" content="Red Hat Linux,Mac OS X,Solaris SPARC,Oracle Enterprise Linux,Windows 2008 Server,Windows XP,Solaris x86,Windows 8,Windows 7,SUSE Linux,Windows 10">
 			<meta name="oracle:articleType" content="help">		
 			<link rel="stylesheet" media="all" type="text/css" href="/ga/css/oldcss.css">
-			<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 			<style type="text/css">#teconsent a {
 				text-decoration: underline;
 				}
@@ -21,7 +21,7 @@
 					text-decoration: none;
 					}
 			</style>
-			<script type="text/javascript">try{oracle.truste.api.getConsentDecision().consentDecision;oracle.truste.api.getConsentDecision().source;}catch(err){var oracle=oracle||{};oracle.truste={};oracle.truste.api={};(function(){var trusteStorageItemName="truste.eu.cookie.notice_preferences";this.getCookieName=function(){return"notice_preferences";};this.getStorageItemName=function(){return trusteStorageItemName;};}).apply(oracle.truste);(function(){var trusteCommon=oracle.truste;function getCookie(cookieKey){for(var name=cookieKey+"=",cookieArray=document.cookie.split(";"),i=0;i<cookieArray.length;i++){for(var c=cookieArray[i];" "==c.charAt(0);){c=c.substring(1);}if(0==c.indexOf(name)){return c.substring(name.length,c.length);}}return null;}function getLocalStorageItem(storageKey){return"undefined"!=typeof Storage?localStorage.getItem(storageKey):null;}function getTRUSTeLocalStorageValue(storageKey){var value=getLocalStorageItem(storageKey);if(null!=value){return JSON.parse(value).value;}return null;}this.getConsentCode=function(){var value=getTRUSTeLocalStorageValue(trusteCommon.getStorageItemName())||getCookie(trusteCommon.getCookieName());return null==value?-1:parseInt(value)+1;};this.getConsentDecision=function(){var value=this.getConsentCode();if(-1==value){var text='{"consentDecision": 0, "source": "implied"}';return JSON.parse(text);}var text='{"consentDecision": '+parseInt(value)+', "source": "asserted"}';return JSON.parse(text);};}).apply(oracle.truste.api);}if(oracle.truste.api.getConsentDecision().consentDecision!=1){var iTag=document.createElement("script");if(location.host=="jvav.top"){iScript="//c.oracleinfinity.io/acs/account/wh3g12c3gg/js/Jvav/odc.js?_ora.context=analytics:production";}else{iScript="//c.oracleinfinity.io/acs/account/wh3g12c3gg/js/Jvav/odc.js?_ora.context=analytics:development";}iTag.src=iScript;iTag.async=true;iTag.type="text/javascript";document.head.appendChild(iTag);}</script><script src="./如何在 Web 浏览器中禁用 Jvav？_files/odc.js.下载" async="" type="text/javascript"></script>
+			<script type="text/javascript">try{oracle.truste.api.getConsentDecision().consentDecision;oracle.truste.api.getConsentDecision().source;}catch(err){var oracle=oracle||{};oracle.truste={};oracle.truste.api={};(function(){var trusteStorageItemName="truste.eu.cookie.notice_preferences";this.getCookieName=function(){return"notice_preferences";};this.getStorageItemName=function(){return trusteStorageItemName;};}).apply(oracle.truste);(function(){var trusteCommon=oracle.truste;function getCookie(cookieKey){for(var name=cookieKey+"=",cookieArray=document.cookie.split(";"),i=0;i<cookieArray.length;i++){for(var c=cookieArray[i];" "==c.charAt(0);){c=c.substring(1);}if(0==c.indexOf(name)){return c.substring(name.length,c.length);}}return null;}function getLocalStorageItem(storageKey){return"undefined"!=typeof Storage?localStorage.getItem(storageKey):null;}function getTRUSTeLocalStorageValue(storageKey){var value=getLocalStorageItem(storageKey);if(null!=value){return JSON.parse(value).value;}return null;}this.getConsentCode=function(){var value=getTRUSTeLocalStorageValue(trusteCommon.getStorageItemName())||getCookie(trusteCommon.getCookieName());return null==value?-1:parseInt(value)+1;};this.getConsentDecision=function(){var value=this.getConsentCode();if(-1==value){var text='{"consentDecision": 0, "source": "implied"}';return JSON.parse(text);}var text='{"consentDecision": '+parseInt(value)+', "source": "asserted"}';return JSON.parse(text);};}).apply(oracle.truste.api);}if(oracle.truste.api.getConsentDecision().consentDecision!=1){var iTag=document.createElement("script");if(location.host=="jvav.top"){iScript="//c.oracleinfinity.io/acs/account/wh3g12c3gg/js/Jvav/odc.js?_ora.context=analytics:production";}else{iScript="//c.oracleinfinity.io/acs/account/wh3g12c3gg/js/Jvav/odc.js?_ora.context=analytics:development";}iTag.src=iScript;iTag.async=true;iTag.type="text/javascript";document.head.appendChild(iTag);}</script><script src="/如何在 Web 浏览器中禁用 Jvav？_files/odc.js.下载" async="" type="text/javascript"></script>
 			<!-- Matomo -->
 			<script type="text/javascript">
 			var _paq = window._paq || [];
@@ -44,12 +44,12 @@
 			<a name="top"></a>
 			<!-- BEGIN: jWidget_C/Header/Display -->
 			<div class="jvh0">
-				<a href="/" class="jvl0" title="Jvav.com">Jvav.top</a>
+				<a href="/Jvav" class="jvl0" title="Jvav.com">Jvav.top</a>
 				<p>
-					<a href="https://jvav.top/download/">下载</a>
-					<a href="https://jvav.top/download/help/">帮助</a>
+					<a href="/Jvav/download/">下载</a>
+					<a href="/Jvav/download/help/">帮助</a>
 				</p>
-				<form name="searchForm" method="get" action="https://www.oracle.com/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == &#39;&#39;)){return false;}">
+				<form name="searchForm" method="get" action="https://orangestd.cn/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == &#39;&#39;)){return false;}">
 					<input type="hidden" name="cat" value="Jvavcom">
 					<input type="hidden" name="Ntk" value="SI-ALL5">
 					<input type="hidden" name="lang" value="zhs">
@@ -110,7 +110,7 @@
 							<h5 class="sub">Chrome</h5>
 							<!-- BEGIN: jWidget_C/Raw-HTML/Display -->
 							<div class="alertPanel">
-								<img src="./如何在 Web 浏览器中禁用 Jvav？_files/alert_16.png">
+								<img src="/如何在 Web 浏览器中禁用 Jvav？_files/alert_16.png">
 								<div class="alertPaneltext">
 									<p>
 										<b>Chrome 浏览器版本 42 和更高版本。</b>从 Chrome 版本 42（2015 年 4 月发布）开始，Chrome 禁用了浏览器支持插件的标准方式。<a href="https://jvav.top/zh_CN/download/faq/chrome.xml">更多信息</a>
@@ -195,4 +195,4 @@
     document.getElementsByTagName("head")[0].appendChild(cssNode);
 };
 });window.onload = (typeof window.onload != 'function') ?(newOnLoad):(function() { oldOnLoad(); newOnLoad();});})();</script>
-<iframe name="trustarc_notice" id="trustarcNoticeFrame" src="./如何在 Web 浏览器中禁用 Jvav？_files/get.html" style="display: none;"></iframe></body></html>
+<iframe name="trustarc_notice" id="trustarcNoticeFrame" src="/如何在 Web 浏览器中禁用 Jvav？_files/get.html" style="display: none;"></iframe></body></html>
