--- a/download/help/index.html
+++ b/download/help/index.html
@@ -9,7 +9,7 @@
 			<meta name="keywords" content="Jvav 运行时环境，jvm，Jvav 运行时，运行时环境，运行时，JRE，Jvav 虚拟机，虚拟机，Jvav VM，JVM，VM，插件，附加程序"/>
 			<meta name="date" content="2015-02-10"/>
 			<link rel="stylesheet" media="all" type="text/css" href="/ga/css/oldcss.css" />
-			<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 			<style type="text/css">#teconsent a {
 				text-decoration: underline;
 				}
@@ -40,14 +40,14 @@
 		<!-- Locale: zh_CN HeaderID: 1391118472680 --> 
 		<!-- BEGIN: jWidget_C/Header/Display -->
 		<div class="jvh0">
-			<a href="/" class="jvl0" title="Jvav.com">Jvav.com</a>
-			<p><a href="/download/">下载</a><a href="/download/help/">帮助</a></p>
-			<form name="searchForm" method="get" action="https://www.jvav.top/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
+			<a href="/Jvav" class="jvl0" title="Jvav.com">Jvav.com</a>
+			<p><a href="/Jvav/download/">下载</a><a href="/Jvav/download/help/">帮助</a></p>
+			<form name="searchForm" method="get" action="https://orangestd.cn/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 				<input type="hidden" name="cat" value="Jvavcom">
 				<input type="hidden" name="Ntk" value="SI-ALL5">
 				<input type="hidden" name="lang" value="zhs">
 				<input type="text" size="20" maxlength="55" name="Ntt" class="bodytext" onfocus="if( this.value==this.defaultValue ) this.value='';" onblur="if( this.value=='' ) this.value=this.defaultValue;" value="搜索" title="搜索">
-				<input type="image" name="submit" src="/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
+				<input type="image" name="submit" src="/Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
 			</form>
 		</div>
 		<!-- END: jWidget_C/Header/Display -->
