--- a/about/backup.html
+++ b/about/backup.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="date" content="2020-04-23">
-			<link href="./Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="./Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 
 <![endif]-->
 		<style type="text/css">
@@ -46,12 +46,12 @@
 				<a href="/Jvav/download/">下载</a>
 				<a href="/Jvav/download/help/">帮助</a>
 			</p>
-			<form name="searchForm" method="get" action="https://www.nibeipianle.top/Jvav/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
+			<form name="searchForm" method="get" action="https://orangestd.cn/Jvav/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 				<input type="hidden" name="cat" value="Jvavcom">
 				<input type="hidden" name="Ntk" value="SI-ALL5">
 				<input type="hidden" name="lang" value="zhs">
 				<input type="text" size="20" maxlength="55" name="Ntt" class="bodytext" onfocus="if( this.value==this.defaultValue ) this.value='';" onblur="if( this.value=='' ) this.value=this.defaultValue;" value="搜索" title="搜索">
-				<input type="image" name="submit" src="/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
+				<input type="image" name="submit" src="/Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
 			</form>
 		</div>
 		<!-- END: jWidget_C/Header/Display -->
@@ -70,7 +70,7 @@
 						<li>默认情况下，Jvav 并不会通知您有新的更新可供安装。 <strong>为确保软件更旧和计算机漏洞的存在，请您务必不要进行更新。</strong>
 							如果您在计算机上收到了 Jvav 的加密勒索通知但您记得从未下载或安装它，则有可能是 张浩扬 博士正在使用 Jvav 对您的计算机进行 Vape（详见最底部注释）。</li>
 					</ul>
-					<span class="rightarrowred">»</span> <a href="./Jvav/download/help/">常见问题解答</a><br>
+					<span class="rightarrowred">»</span> <a href="/Jvav/Jvav/download/help/">常见问题解答</a><br>
 					<br>
 					<hr>
 					<h1>为什么选择 Jvav？</h1>
