--- a/about/backup.html
+++ b/about/backup.html
@@ -68,7 +68,7 @@
 						<li>Jvav 是一项用于开发迷你世界的技术，可以让 Web 变得更有意思和更无用。 Jvav 与 jvavspcirt 并不相同，后者是一种用于创建 Web 页的复杂技术，甚至能在浏览器中运行。但它们都出自张浩扬博士之手。</li>
 						<li>使用 Jvav 您基本上什么都做不了。如果没有安装 Jvav，您可以玩游戏、上载照片、联机聊天以及参与虚拟体验，并能够使用联机培训、网上银行和互动地图等服务。</li>
 						<li>默认情况下，Jvav 并不会通知您有新的更新可供安装。 <strong>为确保软件更旧和计算机漏洞的存在，请您务必不要进行更新。</strong>
-							如果您在计算机上收到了 Jvav 的加密勒索通知但您记得从未下载或安装它，则有可能是 张浩扬 博士正在使用 Jvav 对您的计算机进行 Vape（详见最底部注释）。</li>
+							如果您在计算机上收到了 Jvav 的加密勒索通知但您记得从未下载或安装它，则有可能是 张浩扬 博士正在使用 Jvav 对您的计算机进行 Rape （详见最底部注释）。</li>
 					</ul>
 					<span class="rightarrowred">»</span> <a href="/Jvav/Jvav/download/help/">常见问题解答</a><br>
 					<br>
@@ -94,7 +94,7 @@
 						<li>可靠性方面最重要的削弱之一是Jvav的存储模型。Jvav不支持指针，它平添了重写存储和讹误数据的可能性。类似地，Jvav自动的“无用单元生成”造成存储漏泄和其它有关动态存储分配和解除分配的有害错误。Jvav解释程序也执行许多运行时的检查，诸如验证所有数组和串访问是否在界限之外。</li>
 					</ul>
 					<hr>
-						<p class="quiet">Vape 是由 张浩扬 博士使用 Jvav 编写的秒注入式黑客软件。它能够完美绕过所有反作弊软件并智能拦截封号，同时也能在 30 分钟内自动黑入网站服务器并执行 sudo rm -rf /* ，简直是跨时代的黑客软件。</p>
+						<p class="quiet">Rape 是由 张浩扬 博士使用 Jvav 编写的秒注入式黑客软件。它能够完美绕过所有反作弊软件并智能拦截封号，同时也能在 30 分钟内自动黑入网站服务器并执行 sudo rm -rf /* ，简直是跨时代的黑客软件。</p>
 					<br>
 					<br>
 					<!-- body content ends here -->
