--- a/download/index.html
+++ b/download/index.html
@@ -142,12 +142,12 @@
 					<p>
 						如果您要为另一个计算机或操作系统下载 Jvav，请单击下面的链接。
 						<br />
-						<a href="Jvav/download" title="适用于所有操作系统的 Jvav 下载 ">所有 Jvav 下载</a>
+						<a href="/Jvav/download" title="适用于所有操作系统的 Jvav 下载 ">所有 Jvav 下载</a>
 					</p>
 					<h4>报告问题</h4>
 					<p>访问包含 Jvav 应用程序的页时为什么始终重定向到此页？
 						<br />
-						<span class="rightarrowred">&#187;</span> <a href="Jvav/zh_CN/download/faq/expire_date.xml#redirect">了解详细信息</a><br />
+						<span class="rightarrowred">&#187;</span> <a href="/Jvav/download/help/expire_date.xml#redirect">了解详细信息</a><br />
 					</p>
 					<!-- LEFT COLUMN / -->
 				</div>
