--- a/download/help/disable_browser.html
+++ b/download/help/disable_browser.html
@@ -181,7 +181,7 @@
 					| <a href="https://www.oracle.com/html/3party.html">商标</a>
 					| <a href="/zh_CN/about/disclaimer.jsp">免责声明</a>
 					<br />
-					<a class="github-button" href="https://github.com/TZG-official/Jvav" data-icon="octicon-star" data-show-count="true" aria-label="Star TZG-official/Jvav on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/orangeZSCB/Jvav" data-icon="octicon-star" data-show-count="true" aria-label="Star orangeZSCB/Jvav on GitHub">Star</a>
 					</p>
 				</div>
 				<!-- END: jWidget_C/Footer/Display -->
