--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<!-- BEGIN: jWidget_C/Raw-HTML/Display -->
 						<div>
 							<!-- 01 -->
-							<a href="https://ke.qq.com/course/list/java" target="_blank">
+							<a href="https://ke.qq.com/course/4125523#term_id=104280678" target="_blank">
 							<img src="/Jvav/static/images/ad-by%20tencentclass.jpg" alt="tencent-class"></a></a>
 							</a>
 						</div>
